--- a/app/produtos.html
+++ b/app/produtos.html
@@ -118,6 +118,14 @@
             <div class="header-actions">
                 <input type="text" class="filter-input" id="searchInput" placeholder="Buscar produto..."
                     style="min-width: 200px;">
+                <button class="btn btn-outline" id="btnExportar" title="Exportar para CSV">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg>
+                    Exportar
+                </button>
                 <button class="btn btn-outline" id="btnImportar">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
