--- a/app/validade.html
+++ b/app/validade.html
@@ -114,6 +114,14 @@
                 </div>
             </div>
             <div class="header-actions">
+                <button class="btn btn-outline" id="btnExportar" title="Exportar para CSV">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg>
+                    Exportar
+                </button>
                 <button class="btn btn-primary" id="btnNovoEstoque">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
                         <line x1="12" y1="5" x2="12" y2="19" />
@@ -125,55 +133,89 @@
         </header>
 
         <!-- Filtros -->
-        <section class="filter-section">
-            <div class="filter-row">
+        <section class="filter-section"
+            style="background: var(--bg-card); border-radius: 12px; padding: 20px; margin-bottom: 20px; border: 1px solid var(--border-secondary);">
+            <div
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(160px, 1fr)); gap: 16px; align-items: end;">
                 <div class="filter-group">
-                    <label>Loja</label>
-                    <select class="filter-input" id="filterLoja">
-                        <option value="">Todas as lojas</option>
-                    </select>
+                    <label
+                        style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Loja</label>
+                    <div id="dropdownLoja" class="multiselect-dropdown"></div>
                 </div>
                 <div class="filter-group">
-                    <label>Local</label>
-                    <select class="filter-input" id="filterLocal" disabled>
-                        <option value="">Todos os locais</option>
-                    </select>
+                    <label
+                        style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Local</label>
+                    <div id="dropdownLocal" class="multiselect-dropdown"></div>
                 </div>
                 <div class="filter-group">
-                    <label>Status</label>
-                    <select class="filter-input" id="filterStatus">
-                        <option value="">Todos</option>
-                        <option value="expired">Vencidos</option>
-                        <option value="critical">Críticos (1-3 dias)</option>
-                        <option value="warning">Alerta (4-7 dias)</option>
-                        <option value="ok">OK (8+ dias)</option>
-                    </select>
+                    <label
+                        style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Status</label>
+                    <div id="dropdownStatus" class="multiselect-dropdown"></div>
                 </div>
                 <div class="filter-group">
-                    <label>Buscar</label>
-                    <input type="text" class="filter-input" id="filterSearch" placeholder="Produto...">
+                    <label
+                        style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Período
+                        De</label>
+                    <input type="date" class="filter-input" id="filterDataInicio"
+                        style="width: 100%; padding: 10px 12px; border-radius: 8px; border: 1px solid var(--border-secondary); background: var(--bg-primary); font-size: 14px;">
                 </div>
+                <div class="filter-group">
+                    <label
+                        style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Até</label>
+                    <input type="date" class="filter-input" id="filterDataFim"
+                        style="width: 100%; padding: 10px 12px; border-radius: 8px; border: 1px solid var(--border-secondary); background: var(--bg-primary); font-size: 14px;">
+                </div>
+                <div class="filter-group">
+                    <label
+                        style="display: block; margin-bottom: 6px; font-size: 12px; font-weight: 600; color: var(--text-muted); text-transform: uppercase; letter-spacing: 0.5px;">Buscar</label>
+                    <input type="text" class="filter-input" id="filterSearch" placeholder="Produto ou lote..."
+                        style="width: 100%; padding: 10px 12px; border-radius: 8px; border: 1px solid var(--border-secondary); background: var(--bg-primary); font-size: 14px;">
+                </div>
+                <button class="btn btn-outline" id="btnLimparFiltros"
+                    style="padding: 10px 20px; border-radius: 8px; font-weight: 500;">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16" height="16"
+                        style="margin-right: 6px;">
+                        <path d="M3 6h18M8 6V4a2 2 0 012-2h4a2 2 0 012 2v2m3 0v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6h14z" />
+                    </svg>
+                    Limpar
+                </button>
             </div>
         </section>
 
         <!-- Cards Resumo -->
-        <section class="summary-section">
-            <div class="summary-cards">
-                <div class="summary-card critical">
-                    <span class="summary-value" id="countVencidos">0</span>
-                    <span class="summary-label">Vencidos</span>
+        <section class="summary-section" style="margin-bottom: 24px;">
+            <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 16px;">
+                <div class="summary-card-new"
+                    style="background: var(--bg-card); border-radius: 12px; padding: 20px; border-left: 4px solid #EF4444; box-shadow: 0 1px 3px rgba(0,0,0,0.05); transition: all 0.2s; cursor: pointer;"
+                    onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(239,68,68,0.15)';"
+                    onmouseout="this.style.transform=''; this.style.boxShadow='0 1px 3px rgba(0,0,0,0.05)';">
+                    <span style="display: block; font-size: 32px; font-weight: 700; color: #EF4444;"
+                        id="countVencidos">0</span>
+                    <span style="font-size: 13px; color: var(--text-muted); font-weight: 500;">Vencidos</span>
                 </div>
-                <div class="summary-card warning">
-                    <span class="summary-value" id="countCriticos">0</span>
-                    <span class="summary-label">Críticos</span>
+                <div class="summary-card-new"
+                    style="background: var(--bg-card); border-radius: 12px; padding: 20px; border-left: 4px solid #F97316; box-shadow: 0 1px 3px rgba(0,0,0,0.05); transition: all 0.2s; cursor: pointer;"
+                    onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(249,115,22,0.15)';"
+                    onmouseout="this.style.transform=''; this.style.boxShadow='0 1px 3px rgba(0,0,0,0.05)';">
+                    <span style="display: block; font-size: 32px; font-weight: 700; color: #F97316;"
+                        id="countCriticos">0</span>
+                    <span style="font-size: 13px; color: var(--text-muted); font-weight: 500;">Críticos</span>
                 </div>
-                <div class="summary-card alert">
-                    <span class="summary-value" id="countAlertas">0</span>
-                    <span class="summary-label">Alertas</span>
+                <div class="summary-card-new"
+                    style="background: var(--bg-card); border-radius: 12px; padding: 20px; border-left: 4px solid #F59E0B; box-shadow: 0 1px 3px rgba(0,0,0,0.05); transition: all 0.2s; cursor: pointer;"
+                    onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(245,158,11,0.15)';"
+                    onmouseout="this.style.transform=''; this.style.boxShadow='0 1px 3px rgba(0,0,0,0.05)';">
+                    <span style="display: block; font-size: 32px; font-weight: 700; color: #F59E0B;"
+                        id="countAlertas">0</span>
+                    <span style="font-size: 13px; color: var(--text-muted); font-weight: 500;">Alertas</span>
                 </div>
-                <div class="summary-card ok">
-                    <span class="summary-value" id="countOk">0</span>
-                    <span class="summary-label">OK</span>
+                <div class="summary-card-new"
+                    style="background: var(--bg-card); border-radius: 12px; padding: 20px; border-left: 4px solid #10B981; box-shadow: 0 1px 3px rgba(0,0,0,0.05); transition: all 0.2s; cursor: pointer;"
+                    onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(16,185,129,0.15)';"
+                    onmouseout="this.style.transform=''; this.style.boxShadow='0 1px 3px rgba(0,0,0,0.05)';">
+                    <span style="display: block; font-size: 32px; font-weight: 700; color: #10B981;"
+                        id="countOk">0</span>
+                    <span style="font-size: 13px; color: var(--text-muted); font-weight: 500;">OK</span>
                 </div>
             </div>
         </section>
@@ -199,6 +241,42 @@
                         </tr>
                     </tbody>
                 </table>
+            </div>
+
+            <!-- Paginação -->
+            <div class="pagination"
+                style="display: flex; justify-content: space-between; align-items: center; padding: 16px; border-top: 1px solid var(--border-secondary);">
+                <div class="pagination-info" style="color: var(--text-secondary); font-size: 14px;">
+                    Mostrando <strong id="paginationInfo">1-25 de 0</strong> itens
+                </div>
+                <div class="pagination-controls" style="display: flex; gap: 8px; align-items: center;">
+                    <div class="items-per-page"
+                        style="margin-right: 16px; display: flex; align-items: center; gap: 8px;">
+                        <span style="font-size: 13px; color: var(--text-muted);">Itens por página:</span>
+                        <select id="itemsPerPage"
+                            style="padding: 6px; border-radius: 6px; border: 1px solid var(--border-secondary); background: var(--bg-primary); font-size: 13px;">
+                            <option value="25">25</option>
+                            <option value="50">50</option>
+                            <option value="75">75</option>
+                            <option value="100">100</option>
+                        </select>
+                    </div>
+
+                    <button class="pagination-btn" id="btnPrevPage" disabled>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
+                            height="16">
+                            <polyline points="15 18 9 12 15 6" />
+                        </svg>
+                    </button>
+                    <span id="pageNumberDisplay"
+                        style="font-size: 14px; font-weight: 500; min-width: 60px; text-align: center;">Página 1</span>
+                    <button class="pagination-btn" id="btnNextPage" disabled>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="16"
+                            height="16">
+                            <polyline points="9 18 15 12 9 6" />
+                        </svg>
+                    </button>
+                </div>
             </div>
         </section>
     </main>
