--- a/app/roles.html
+++ b/app/roles.html
@@ -70,7 +70,7 @@
         </div>
 
         <nav class="sidebar-nav">
-            <a href="index.html" class="nav-item"><span class="nav-icon"><svg viewBox="0 0 24 24" fill="none"
+            <a href="dashboard.html" class="nav-item"><span class="nav-icon"><svg viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2">
                         <rect x="3" y="3" width="7" height="7" />
                         <rect x="14" y="3" width="7" height="7" />
