--- a/app/validade.html
+++ b/app/validade.html
@@ -285,7 +285,7 @@
     <div class="modal-overlay" id="modalEstoque">
         <div class="modal">
             <div class="modal-header">
-                <h2 id="modalTitle">Adicionar Estoque</h2>
+                <h2 id="modalTitle">Coletar Produto</h2>
                 <button class="modal-close" id="modalClose">&times;</button>
             </div>
             <div class="modal-body">
@@ -313,14 +313,21 @@
                             <input type="number" id="estoqueQtd" required min="1" value="1">
                         </div>
                         <div class="form-group">
+                            <label for="estoqueValor">Valor Unitário (R$) *</label>
+                            <input type="number" id="estoqueValor" required step="0.01" min="0" placeholder="0,00">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
                             <label for="estoqueValidade">Validade *</label>
                             <input type="date" id="estoqueValidade" required>
                         </div>
+                        <div class="form-group">
+                            <label for="estoqueLote">Lote</label>
+                            <input type="text" id="estoqueLote" placeholder="Número do lote (opcional)">
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label for="estoqueLote">Lote</label>
-                        <input type="text" id="estoqueLote" placeholder="Número do lote (opcional)">
-                    </div>
+
                     <div class="form-actions">
                         <button type="button" class="btn btn-outline" id="btnCancelModal">Cancelar</button>
                         <button type="submit" class="btn btn-primary">Salvar</button>
