Fix: Mobile menu overlay and close behavior on all pages

--- a/app/produtos.html
+++ b/app/produtos.html
@@ -99,6 +99,9 @@
         </div>
     </aside>
 
+    <!-- Sidebar Overlay for Mobile -->
+    <div class="sidebar-overlay" id="sidebarOverlay"></div>
+
     <!-- Main Content -->
     <main class="main-content">
         <header class="page-header">
