--- a/app/dashboard.html
+++ b/app/dashboard.html
@@ -692,6 +692,14 @@
                     </svg></span>
                 <span class="nav-text">Dashboard</span>
             </a>
+            <a href="coleta.html" class="nav-item">
+                <span class="nav-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M3 4h2v16H3zM8 4h1v16H8zM12 4h2v16h-2zM17 4h1v16h-1zM21 4h2v16h-2z" />
+                    </svg>
+                </span>
+                <span class="nav-text">Nova Coleta</span>
+            </a>
             <a href="validade.html" class="nav-item">
                 <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
