Fix: Remove auth loop in coleta.html

--- a/app/coleta.html
+++ b/app/coleta.html
@@ -199,11 +199,8 @@
 
 <body>
     <!-- Auth Check -->
-    <script>
-        if (!sessionStorage.getItem("usuarioLogado")) {
-            window.location.href = "login.html";
-        }
-    </script>
+    <!-- Auth Check handled by coleta.js -->
+
 
     <div class="coleta-container">
 
